# bestini

./: README.md  pyproject.toml
bestini/: README.md  constants.py  file_loader.py  main.py  models.py
tests/: strategies.py
tests/unit/: test_file_loader.py  test_models.py
