[tool.poetry]
name = "bestini"
version = "0.1.0"
description = ""
authors = ["Mr Ugge <mrugges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
icecream = "^2.1.3"
pyqt6 = "^6.7.1"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
