[tool.poetry]
name = "bestini"
version = "0.1.0"
description = ""
authors = ["mrugges <mrugges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"
black = "^24.8.0"
hypothesis = "^6.111.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
